# VeryLargeWeebModel

./: .gitignore  ATTRIBUTION.md  CHANGELOG.md  CLAUDE.md  HOW_TO_TRAIN.md  README.md  TRAINING_LOG.md  TRANSFORMS_README.md  ardupilot_gazebo_integration_guide.md  arxiv_2506_24088_verification_code.py  conftest.py  prompts.md  pyproject.toml  requirements-full.txt  requirements-open3d.txt  requirements.txt  train.py  train.sh  train_6dof.py  training.md
config/: eval_tokyo_gazebo.py  finetune_6dof.py  finetune_nuscenes.py  finetune_nuscenes_6dof.py  finetune_tokyo.py  finetune_uavscenes.py  test_local.py
dataset/: __init__.py  gazebo_occworld_dataset.py  midair_dataset.py  nuscenes_6dof_dataset.py  nuscenes_occworld_dataset.py  open3d_features.py  tartanair_dataset.py  transforms.py  uavscenes_dataset.py
docs/: ACTION_CONDITIONED_INFERENCE.md  README.md  SCALEUP_PLAN.md  TRAINING.md  american-opensource-drone-guide.md  architecture_blueprint.md  blog_post.md  lambda_cloud_deployment.md  optimization_and_debugging.md  slides.md  training_guide.md  vastai_deployment.md  youtube_video_script.md
examples/: action_conditioned_inference.py  use_transforms.py
models/: __init__.py  occworld_6dof.py
paper/: Makefile  README.md  main.tex
scripts/: convert_plateau_simple.py  create_dummy_data.py  data_collection_mission.py  deploy_to_lambda.sh  depth_occupancy_processor.py  download_and_prepare_data.sh  download_and_upload_to_s3.py  download_pretrained.py  download_research_data.sh  download_uavscenes_manual.sh  experiment.py  gazebo_data_collector.py  generate_training_data.sh  install_ardupilot_gazebo_stack.sh  install_open3d.sh  integration_test.py  lambda_setup.sh  launch_occworld_simulation.sh  onstart.sh  plateau_to_occworld.py  prep_s3_for_training.py  run_remote_checklist_with_report.sh  run_training.sh  sanity_check.sh  sanity_check_data.py  setup_6dof_training.sh  setup_and_train.sh  setup_nuscenes.sh  setup_open3d_pipeline.py  setup_training_data.sh  setup_uavscenes.sh  train_optimized.sh  uavscenes_s3.py  upload_data_cache.sh  vastai_deploy.sh  vastai_setup.sh  verify_real_data.sh  verify_uavscenes_occupancy.py  vlwm_cli.py
tests/: __init__.py  test_action_conditioned.py  test_cli.py  test_comprehensive.py  test_datasets.py  test_integration.py  test_losses.py  test_models.py  test_utils.py  (+4 more)
(+40 files in other folders)
